#75 - searches the assets in metadata index, tried to index literals in italian first, english second and default otherwise.
Co-authored-by: Keerthana R <keerthana.r@thoughtworks.com>